# kobo-utilities

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  README.md  __builtins__.pyi  __init__.py  about.md  about.txt  action.py  book.py  changelog.txt  common_utils.py  config.py  container.py  dialogs.py  jobs.py  pyproject.toml  run.cmd
.github/workflows/: main.yml  release.yml
help/: KoboUtilities_Help_en.html  KoboUtilities_Help_fr.html
koboutilities/: __builtins__.pyi  __init__.py  action.py  book.py  common_utils.py  config.py  constants.py  dialogs.py  jobs.py  utils.py  whitelist.py
koboutilities/features/: analytics.py  annotations.py  backup.py  booksnotindb.py  cleanimages.py  covers.py  database.py  duplicateshelves.py  getshelves.py  locations.py  manageseries.py  metadata.py  reader.py  readingstatus.py  relatedbooks.py  removeannotations.py  toc.py
scripts/: run
tests/: kobo-schema.sql  library-config.json  plugin-config.json  test_config.py  test_koboutilities.py  test_locations.py
translations/: es.po  fr.po  messages.pot
