[project]
name = "kobo-utilities"
# Unused, see koboutilities/__init__.py
version = "0.1.0"
description = "A Calibre plugin providing additional functionality for Kobo eReaders"
readme = "README.md"
requires-python = "==3.8.5"
dependencies = ["apsw==3.43.0"]

[tool.ruff]
line-length = 88
builtins = ["_", "I", "P", "load_translations", "get_resources", "get_icons"]
exclude = ["calibre-repo"]
target-version = "py38"

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # mccabe
  # "C90",
  # pep8-naming
  # "N",
  # pyupgrade
  # "UP",
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-blind-except
  # "BLE",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-datetimez
  "DTZ",
  # flake8-executable
  "EXE",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-import-conventions
  "ICN",
  # flake8-logging-format
  "G",
  # flake8-no-pep420
  "INP",
  # flake8-pie
  "PIE",
  # flake8-pytest-style
  "PT",
  # flake8-return
  "RET",
  # flake8-self
  # "SLF",
  # flake8-simplify
  "SIM",
  # flake8-type-checking
  "TC",
  # flake8-unused-arguments
  "ARG",
  # flake8-use-pathlib
  # "PTH",
  # flake8-todos
  # "TD",
  # eradicate
  # "ERA",
  # pygrep-hooks
  "PGH",
  # pylint
  "PLE",
  # "PLR",
  # "PLW",
  # tryceratops
  # "TRY",
  # flynt
  "FLY",
  # Perflint
  "PERF",
  # refurb
  "FURB",
  # Ruff-specific rules
  "RUF",
]

ignore = [
  "S101",
  # Disable some rules that conflict with the formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "E501",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]

unfixable = [
  # unused-variable: Local variable {name} is assigned to but never used
  # This can be undesirable if the file is saved before adding the code that
  # uses a variable.
  "F841",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
[tool.pyright]
typeCheckingMode = "standard"
include = ["koboutilities/**/*.py", "tests/*.py", "scripts/run"]
exclude = ["**/__pycache__"]
extraPaths = ["../calibre/src", "calibre-repo/src"]
ignore = ["../calibre/src", "calibre-repo/src"]
pythonVersion = "3.8"
# reportImportCycles = "warning"

# Individual strict checks
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingTypeStubs = "error"
reportAssertAlwaysTrue = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "error"
reportSelfClsParameterName = "error"
reportUnsupportedDunderAll = "error"
reportUnusedExpression = "error"
reportWildcardImportFromLibrary = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"
reportMatchNotExhaustive = "error"
# reportMissingParameterType = "error"
# reportMissingTypeArgument = "error"
# reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
# reportUnknownArgumentType = "error"
# reportUnknownLambdaType = "error"
# reportUnknownMemberType = "error"
# reportUnknownParameterType = "error"
# reportUnknownVariableType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnusedClass = "error"
reportUnusedImport = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
# reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
